# Python-DeepLinks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit-checks.yml
src/pydeeplinks/: README.md  __init__.py  data_types.py  main.py  utils.py
src/pydeeplinks/handlers/: __init__.py  discord.py  facebook.py  linkedin.py  unknown.py  youtube.py
tests/: test_discord.py  test_facebook.py  test_linkedin.py  test_youtube.py
