[project]
name = "pydeeplinks"
version = "0.1.0"
description = "A Python backend companion library that converts standard web URLs into platform-specific deep links. It detects the target platform and generates Android intent links, iOS deep links, and web fallbacks for server-side use cases."
readme = "README.md"
authors = [
    { name = "Kishan Dev", email = "kishandev2509@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pydeeplinks = "pydeeplinks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "mypy>=1.14.1",
]


[tool.ruff]
line-length = 200
